# mcp-server-wechat

./: .gitignore  CHANGELOG.md  LICENSE  MCP_CHERRY_STUDIO_SETUP.md  README.md  claude_config_example.json  pyproject.toml
examples/: README.md  get_article.py  search_articles.py
src/mcp_server_wechat/: __init__.py  server.py
src/mcp_server_wechat/tools/: __init__.py  account.py  article.py  search.py  trending.py
src/mcp_server_wechat/utils/: __init__.py  errors.py  formatters.py  wechat_client.py
tests/: README.md  conftest.py  test_tools.py
